first version release to goole play : need to fix: 1. check AD position 2. performance

--- a/res/layout/activity_play.xml
+++ b/res/layout/activity_play.xml
@@ -37,6 +37,17 @@
                 android:id="@+id/tv_webContent"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/editText_webContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:focusable="false"
+                android:inputType="textMultiLine" >
+
+                <requestFocus />
+            </EditText>
             
         </LinearLayout>
     </ScrollView>
