--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
     <RelativeLayout
@@ -14,27 +10,36 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true"
+        android:paddingBottom="@dimen/activity_horizontal_margin" >
 
         <ListView
             android:id="@+id/mainListView"
-            android:layout_width="fill_parent"
-            android:layout_height="397dp"
+            android:layout_width="wrap_content"
+            android:layout_height="390dp"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true" >
 
         </ListView>
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/ADLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
+        android:layout_below="@+id/relativeLayout1" >
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ADLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical" >
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
