--- a/res/layout/activity_play.xml
+++ b/res/layout/activity_play.xml
@@ -32,7 +32,14 @@
             <TextView
                 android:id="@+id/tv_webContent"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:textAllCaps="false"
+                android:textIsSelectable="true"
+                android:textSize="18sp"
+                 />
 
             <EditText
                 android:id="@+id/editText_webContent"
