--- a/res/layout/activity_play.xml
+++ b/res/layout/activity_play.xml
@@ -9,39 +9,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
-        <VideoView
-            android:id="@+id/videoView_CNNS"
-            android:layout_width="wrap_content"
-            android:layout_height="194dp" />
         
+	    <VideoView
+	        android:id="@+id/videoView_CNNS"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" />
+	    
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_webContent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/linearLayout1"
-        android:layout_below="@+id/linearLayout1" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/tv_webContent"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingTop="5dp"
-                android:textAllCaps="false"
-                android:textIsSelectable="true"
-                android:textSize="18sp" />
+        android:layout_below="@+id/linearLayout1"
+        android:clickable="true"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:textAllCaps="false"
+        android:textIsSelectable="true"
+        android:textSize="18sp" />
             
-        </LinearLayout>
-    </ScrollView>
-    
 </RelativeLayout>
