--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item 
+        android:id="@+id/action_info" 
+        android:orderInCategory="101"
+        android:showAsAction="never"
+        android:title="@string/action_info" />
 
 </menu>
