--- a/res/xml/pref_general.xml
+++ b/res/xml/pref_general.xml
@@ -23,13 +23,13 @@
          dismiss it.
     -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code.
+    -->
     <ListPreference
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
-        android:key="example_list"
+        android:defaultValue="zh-TW"
+        android:entries="@array/pref_translate_language"
+        android:entryValues="@array/pref_translate_language_values"
+        android:key="pref_translat_language"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
-        android:title="@string/pref_title_add_friends_to_messages" />
-    -->
+        android:title="@string/pref_title_set_translate_language" />
 </PreferenceScreen>
