--- a/res/values/strings_activity_settings.xml
+++ b/res/values/strings_activity_settings.xml
@@ -17,6 +17,7 @@
     <string name="pref_title_setTextSize">Set Script Text Size (8 ~ 50)</string>
     <string name="pref_description_setTextSize">Set Script Text Size</string>
     <string name="pref_default_TextSize">18</string>
+    <string name="pref_title_set_script_theme">Set Script Theme</string>
     <string name="pref_title_set_translate_language">Choose quick translate language</string>
     
     <string-array name="pref_example_list_titles">
@@ -28,6 +29,22 @@
         <item>1</item>
         <item>0</item>
         <item>-1</item>
+    </string-array>
+    
+    <string-array name="pref_script_theme">
+       	<item>black  -  white</item>
+       	<item>white  -  black</item>
+       	<item>white  -  purple</item>
+       	<item>black  -  yellow</item>
+       	<item>green  -  black</item>
+    </string-array>
+    
+    <string-array name="pref_script_theme_values">
+       	<item>0</item>
+       	<item>1</item>
+       	<item>2</item>
+       	<item>3</item>
+       	<item>4</item>
     </string-array>
     
     <string-array name="pref_translate_language">
@@ -48,7 +65,25 @@
         <item>French</item>
         <item>Spanish</item>
         <item>Italian</item>
+        
+        <item>Bulgarian</item>
+        <item>Czech</item>
+        <item>Danish</item>
+        <item>Dutch</item>
+        <item>Finnish</item>
+        <item>Greek</item>
+        <item>Hebrew</item>
+        <item>Hindi</item>
+        <item>Hungarian</item>
+        <item>Norwegian</item>
+        <item>Persian</item>
+        <item>Polish</item>
+        <item>Portuguese</item>
+        <item>Swedish</item>
+        <item>Turkish</item>
+        <item>Ukrainian</item>
     </string-array>
+    
     <string-array name="pref_translate_language_values">
         <item>zh-TW</item>
         <item>zh-CN</item>
@@ -67,6 +102,22 @@
         <item>fr</item>
         <item>es</item>
         <item>it</item>
+
+        <item>bg</item>
+        <item>cs</item>
+        <item>da</item>
+        <item>nl</item>
+        <item>fi</item>
+        <item>el</item>
+        <item>iw</item>
+        <item>hi</item>
+        <item>hu</item>
+        <item>no</item>
+        <item>fa</item>
+        <item>pl</item>
+        <item>pt</item>
+        <item>tr</item>
+        <item>uk</item>
     </string-array>
 
     <!-- Example settings for Data & Sync -->
