--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -17,5 +17,11 @@
 	    android:orderInCategory="102"
 	    android:showAsAction="never"
 	    android:title="@string/action_qa" />
+    
+    <item 
+	    android:id="@+id/action_notelist" 
+	    android:orderInCategory="103"
+	    android:showAsAction="never"
+	    android:title="@string/action_notelist" />
 
 </menu>
