--- a/res/values/strings_activity_settings.xml
+++ b/res/values/strings_activity_settings.xml
@@ -14,11 +14,13 @@
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string name="pref_title_download">Enable Auto Download</string>
     <string name="pref_description_download">If checked, will download video automatically to sdcard</string>
+    <string name="pref_longpress_translate_title">Enable Long Press Translate</string>
+    <string name="pref_longpress_translate_description">Long press a word, then click \"menu\" key</string>
     <string name="pref_title_setTextSize">Set Script Text Size (8 ~ 50)</string>
     <string name="pref_description_setTextSize">Set Script Text Size</string>
     <string name="pref_default_TextSize">18</string>
     <string name="pref_title_set_script_theme">Set Script Theme</string>
-    <string name="pref_title_set_translate_language">Choose quick translate language</string>
+    <string name="pref_title_set_translate_language">Choose Quick Translate Language</string>
     
     <string-array name="pref_example_list_titles">
         <item>Always</item>
@@ -37,6 +39,9 @@
        	<item>white  -  purple</item>
        	<item>black  -  yellow</item>
        	<item>green  -  black</item>
+       	<item>white  -  green</item>
+       	<item>white  -  blue</item>
+       	<item>white  -  red</item>
     </string-array>
     
     <string-array name="pref_script_theme_values">
@@ -45,6 +50,9 @@
        	<item>2</item>
        	<item>3</item>
        	<item>4</item>
+       	<item>5</item>
+       	<item>6</item>
+       	<item>7</item>
     </string-array>
     
     <string-array name="pref_translate_language">
@@ -52,9 +60,7 @@
         <item>Chinese (simplified)</item>
         <item>Korean</item>
         <item>Japanese</item>
-        <!--   
         <item>Vietnamese</item>
-        -->
         <item>Thai</item>
         <item>Indonesian</item>
         <item>Malay</item>
@@ -89,9 +95,7 @@
         <item>zh-CN</item>
         <item>ko</item>
         <item>ja</item>
-        <!--
         <item>vi</item>
-        -->
         <item>th</item>
         <item>id</item>
         <item>ms</item>
@@ -116,6 +120,7 @@
         <item>fa</item>
         <item>pl</item>
         <item>pt</item>
+        <item>sv</item>
         <item>tr</item>
         <item>uk</item>
     </string-array>
