--- a/res/xml/pref_general.xml
+++ b/res/xml/pref_general.xml
@@ -42,4 +42,10 @@
         android:positiveButtonText="@null"
         android:title="@string/pref_title_set_translate_language" />
     
+	<CheckBoxPreference
+	 android:defaultValue="false"
+	 android:key="pref_longpress_translate"
+	 android:summary="@string/pref_longpress_translate_description"
+	 android:title="@string/pref_longpress_translate_title" />
+       
 </PreferenceScreen>
