--- a/res/layout/activity_play.xml
+++ b/res/layout/activity_play.xml
@@ -15,6 +15,14 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" />
 	    
+	    <Button
+         android:id="@+id/translate_button"
+         style="?android:attr/buttonStyleSmall"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentRight="true"
+         android:text="@string/string_translate" />
+	    
     </RelativeLayout>
 
     <ScrollView
