--- a/res/xml/pref_general.xml
+++ b/res/xml/pref_general.xml
@@ -47,5 +47,11 @@
 	 android:key="pref_longpress_translate"
 	 android:summary="@string/pref_longpress_translate_description"
 	 android:title="@string/pref_longpress_translate_title" />
+	
+	<CheckBoxPreference
+	 android:defaultValue="false"
+	 android:key="pref_soft_button_translate"
+	 android:summary="@string/pref_soft_button_translate_description"
+	 android:title="@string/pref_soft_button_translate_title" />
        
 </PreferenceScreen>
