--- a/res/values/strings_activity_settings.xml
+++ b/res/values/strings_activity_settings.xml
@@ -23,6 +23,7 @@
     <string name="pref_default_TextSize">18</string>
     <string name="pref_title_set_script_theme">Set Script Theme</string>
     <string name="pref_title_set_translate_language">Choose Quick Translate Language</string>
+    <string name="pref_title_auto_delete_file">Auto Delete Related Files</string>
     
     <string-array name="pref_example_list_titles">
         <item>Always</item>
@@ -36,14 +37,14 @@
     </string-array>
     
     <string-array name="pref_script_theme">
-       	<item>black  -  white</item>
-       	<item>white  -  black</item>
-       	<item>white  -  purple</item>
-       	<item>black  -  yellow</item>
-       	<item>green  -  black</item>
-       	<item>white  -  green</item>
-       	<item>white  -  blue</item>
-       	<item>white  -  red</item>
+       	<item>Black  -  White</item>
+       	<item>White  -  Black</item>
+       	<item>White  -  Purple</item>
+       	<item>Black  -  Yellow</item>
+       	<item>Green  -  Black</item>
+       	<item>White  -  Green</item>
+       	<item>White  -  Blue</item>
+       	<item>White  -  Red</item>
     </string-array>
     
     <string-array name="pref_script_theme_values">
@@ -55,6 +56,26 @@
        	<item>5</item>
        	<item>6</item>
        	<item>7</item>
+    </string-array>
+    
+	<string-array name="pref_auto_delete_file">
+       	<item>Never delete</item>
+       	<item>Delete if file not change > 5 day</item>
+       	<item>Delete if file not change > 10 day</item>
+       	<item>Delete if file not change > 15 day</item>
+       	<item>Delete if file not change > 20 day</item>
+       	<item>Delete if file not change > 25 day</item>
+       	<item>Delete if file not change > 30 day</item>
+    </string-array>
+    
+	<string-array name="pref_auto_delete_file_value">
+       	<item>0</item>
+       	<item>1</item>
+       	<item>2</item>
+       	<item>3</item>
+       	<item>4</item>
+       	<item>5</item>
+       	<item>6</item>
     </string-array>
     
     <string-array name="pref_translate_language">
