--- a/res/xml/pref_general.xml
+++ b/res/xml/pref_general.xml
@@ -53,5 +53,14 @@
 	 android:key="pref_soft_button_translate"
 	 android:summary="@string/pref_soft_button_translate_description"
 	 android:title="@string/pref_soft_button_translate_title" />
+	
+	<ListPreference
+	   android:defaultValue="0"
+	   android:entries="@array/pref_auto_delete_file"
+	   android:entryValues="@array/pref_auto_delete_file_value"
+	   android:key="pref_auto_delete_file"
+	   android:negativeButtonText="@null"
+	   android:positiveButtonText="@null"
+	   android:title="@string/pref_title_auto_delete_file" />
        
 </PreferenceScreen>
