--- a/res/layout/activity_play.xml
+++ b/res/layout/activity_play.xml
@@ -14,7 +14,6 @@
 	        android:id="@+id/videoView_CNNS"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" />
-	    
 	   
 	    <Button
          android:id="@+id/translate_button"
@@ -24,6 +23,20 @@
          android:layout_alignParentRight="true"
          android:text="@string/string_translate" />
 	    
+	    <TextView
+            android:id="@+id/video_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp"
+            android:textAllCaps="false"
+            android:textIsSelectable="true"
+            android:layout_alignParentLeft="true"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+        
     </RelativeLayout>
 
 
@@ -34,7 +47,9 @@
         android:layout_height="wrap_content" >
 
         
-        <TextView
+<!--         <TextView -->
+        <EditText
+            android:inputType="textMultiLine"
             android:id="@+id/tv_webContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
