--- a/res/values/strings_activity_settings.xml
+++ b/res/values/strings_activity_settings.xml
@@ -14,13 +14,18 @@
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string name="pref_title_download">Enable Auto Download</string>
     <string name="pref_description_download">If checked, will download video automatically to sdcard</string>
+    <string name="pref_title_videoControlBar">Enable Video Control Bar</string>
+    <string name="pref_description_videoControlBar">show or hide video control bar</string>
     <string name="pref_longpress_translate_title">Enable \"MENU\" key Translate</string>
     <string name="pref_longpress_translate_description">Long press to select a word, then click \"MENU\" key</string>
-    <string name="pref_soft_button_translate_title">Enable Soft Translate Button</string>
+    <string name="pref_soft_button_translate_title">Enable Translate Button</string>
     <string name="pref_soft_button_translate_description">Long press to select a word, then click \"Translate\" button ( right top of video )</string>
     <string name="pref_title_setTextSize">Set Script Text Size (8 ~ 50)</string>
     <string name="pref_description_setTextSize">Set Script Text Size</string>
     <string name="pref_default_TextSize">18</string>
+    <string name="pref_title_setSwipeTime">Set Rewind/FF Time(1 ~ 20s)</string>
+    <string name="pref_description_setSwipeTime">Set Time of Rewind/FastForward</string>
+    <string name="pref_default_SwipeTime">3</string>
     <string name="pref_title_set_script_theme">Set Script Theme</string>
     <string name="pref_title_set_translate_language">Choose Quick Translate Language</string>
     <string name="pref_title_auto_delete_file">Auto Delete Related Files</string>
@@ -107,6 +112,7 @@
         <item>Chinese (simplified)</item>
         <item>Korean</item>
         <item>Japanese</item>
+        <item>English</item>
         <item>Vietnamese</item>
         <item>Thai</item>
         <item>Indonesian</item>
@@ -142,6 +148,7 @@
         <item>zh-CN</item>
         <item>ko</item>
         <item>ja</item>
+        <item>eng</item>
         <item>vi</item>
         <item>th</item>
         <item>id</item>
